# base-app

./: README.md  pyproject.toml
Docker/: docker-compose-dev.yaml
backend/api/: app.py  main.py
backend/api/routes/: users.py
backend/common/core/: config.py
backend/common/core/envs/: local.env
backend/common/db/: __init__.py  settings.py
backend/common/models/: user.py
backend/common/repositories/: users.py
