[tool.poetry]
name = "base-app"
version = "0.1.0"
description = ""
authors = ["Liam Tiernan <ltiernan@mmitnetwork.com>"]
readme = "README.md"
packages = [{include = "base_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
SQLAlchemy = "^2.0.4"
alembic = "^1.9.4"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
